<resources>
    <string name="app_name">PayBackTraders</string>
    <string name="app_version">Test Version 1.0.0</string>
    <string name="dashboard">Dashboard</string>
    <string name="distributor">Distributor</string>
    <string name="master_distributor">Master Distributor</string>
    <string name="client">Client</string>
    <string name="product">Product</string>

    <string-array name="user_type">
        <item>Admin</item>
        <item>Master Distributor</item>
        <item>Distributor</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_client">Total Client</string>
    <string name="client_counter">0</string>
    <string name="total_distributor">Total Distributor</string>
    <string name="total_product">Total Product</string>
    <string name="total_wallet">Total amount in wallet</string>
    <string name="close">close</string>
    <string name="signing_term">By signing in, you agree to <font>our terms of use</font> policy.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_profile">My Profile</string>
    <string name="enquiry">Enquiry</string>
    <string name="finance">Finance</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="cross_button">Cross Button</string>
    <string name="remarks_heading">Remarks</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_paswrd">Forgot Password</string>
    <string name="enter_email_string">Enter your Email is below and we will send you \n a one time password.</string>
    <string name="enter_otp_string">Enter the OTP sent to the Provided \n email address.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend">Resend</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="wallet_history">Wallet History</string>
    <string name="wallet_withdrawal">Wallet Withdrawl</string>
    <string name="visit_site">PayBack</string>
    <string name="supprt">Support</string>
    <string name="copyright">Copyright @ 2023 PayBack. All Rights Reserved</string>
    <string name="refresh">refresh</string>
    <string name="broker">Broker</string>

</resources>