<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashBoardFragment"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/masterDistributorFragment"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/master_distributor" />

        <item
            android:id="@+id/distributorFragment"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/distributor" />

        <item
            android:id="@+id/clientFragment"
            android:icon="@drawable/ic_client"
            android:title="@string/client" />

        <item
            android:id="@+id/productFragment"
            android:icon="@drawable/ic_product"
            android:title="@string/product" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/EnquiryFragment"
            android:icon="@drawable/ic_mail"
            android:title="@string/enquiry" />
        <item
            android:id="@+id/financeFragment"
            android:icon="@drawable/ic_finance_logo"
            android:title="@string/finance" />
    </group>


        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    <item
        android:id="@+id/appversion"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/app_version" />

</menu>