<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchMenu"
        android:orderInCategory="100"
        android:visible="false"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/filterMenu"
        android:orderInCategory="100"
        android:visible="false"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/dateMenu"
        android:orderInCategory="100"
        android:visible="false"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_calendar"
        android:title="@string/date"
        app:showAsAction="always" />


</menu>