<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/dashBoardFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.paybacktraders.paybacktraders.activity.ui.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/EnquiryFragment"
        android:name="com.paybacktraders.paybacktraders.activity.ui.gallery.EnquiryFragment"
        android:label="@string/enquiry"
        tools:layout="@layout/fragment_enquiry" />

    <fragment
        android:id="@+id/financeFragment"
        android:name="com.paybacktraders.paybacktraders.activity.ui.slideshow.FinanceFragment"
        android:label="@string/finance"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/dashBoardFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.DashBoardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dash_board" />
    <fragment
        android:id="@+id/masterDistributorFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.MasterDistributorFragment"
        android:label="@string/master_distributor"
        tools:layout="@layout/fragment_master_distributor" >
        <action
            android:id="@+id/action_masterDistributorFragment_to_distributorFragment"
            app:destination="@id/distributorFragment" />
    </fragment>
    <fragment
        android:id="@+id/clientFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.ClientFragment"
        android:label="@string/client"
        tools:layout="@layout/fragment_client" >
        <argument
            android:name="client"
            app:argType="com.paybacktraders.paybacktraders.model.model.apiresponse.DataEmployeeAll" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/distributorFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.DistributorFragment"
        android:label="@string/distributor"
        tools:layout="@layout/fragment_distributor" />
    <fragment
        android:id="@+id/dialogRemarkStatusBinding"
        android:name="com.paybacktraders.paybacktraders.dialogs.ClientStatusRemarkDialog"
        android:label="Remarks"
        tools:layout="@layout/dialog_remark_status">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/walletHistoryFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.WalletHistoryFragment"
        android:label="Wallet History"
        tools:layout="@layout/fragment_wallet_history" />
    <fragment
        android:id="@+id/walletWithdrawlFragment"
        android:name="com.paybacktraders.paybacktraders.fragments.WalletWithdrawlFragment"
        android:label="Wallet Withdrawl"
        tools:layout="@layout/fragment_wallet_withdrawl"
        />
    <activity
        android:id="@+id/customerDetailsActivity"
        android:name="com.paybacktraders.paybacktraders.activity.CustomerDetailsActivity"
        android:label="CustomerDetailsActivity"
        tools:layout="@layout/activity_customer_details"/>


</navigation>